--- a/css/style.css
+++ b/css/style.css
@@ -70,20 +70,26 @@ h1,
 h2 {
   font-family: 'Merriweather Sans', sans-serif;
 }
-.remove-padding-right {
+/* .remove-padding-right {
   padding-right: unset !important;
-}
+} */
 .title-gradient {
+  
+  background: linear-gradient(to right, #21cb13, #914e1a) !important;
+  -webkit-background-clip: text !important;
+  color: transparent !important;
+}
+.line-height-1-5 {
   line-height: 1.5;
-  background: linear-gradient(to right, #21cb13, #914e1a);
-  -webkit-background-clip: text;
-  color: transparent;
+}
+.line-height-2 {
+  line-height: 2;
 }
 .gradient-border {
   border: 4px solid;
   border-image-slice: 1;
   border-width: 4px;
-  border-image-source: linear-gradient(to right, #ff7e5f, #feb47b);
+  border-image-source: linear-gradient(to right, #21cb13, #914e1a);
 }
 .hr-gradient {
   border: 0;
@@ -536,6 +542,12 @@ a:focus {
 .professional_section .detail-box a:hover {
   background-color: transparent;
   color: #ff8a1d;
+}
+.slogan-detail {
+  color: #052d03;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: justify;
 }
 
 .service_section {
